--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
-$background-color: #1e1e1e;
+$background-color: #000000;
 
 html,
 body {
